--- a/.github/workflows/cherry-pick.yml
+++ b/.github/workflows/cherry-pick.yml
@@ -3,7 +3,6 @@ on:
     branches:
       - main
     types: ["closed"]
-    permissions: write-all
 
 jobs:
   cherry_pick_release_0_1_x:
@@ -22,4 +21,4 @@ jobs:
           labels: |
             cherry-pick
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.TOKEN }}
